fix: content data pipeline 구현 완료